; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_mite.c_mite_free_dma_descs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_mite.c_mite_free_dma_descs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mite_ring = type { i32, i32, %struct.mite_dma_desc*, i32 }
%struct.mite_dma_desc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mite_ring*)* @mite_free_dma_descs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mite_free_dma_descs(%struct.mite_ring* %0) #0 {
  %2 = alloca %struct.mite_ring*, align 8
  %3 = alloca %struct.mite_dma_desc*, align 8
  store %struct.mite_ring* %0, %struct.mite_ring** %2, align 8
  %4 = load %struct.mite_ring*, %struct.mite_ring** %2, align 8
  %5 = getelementptr inbounds %struct.mite_ring, %struct.mite_ring* %4, i32 0, i32 2
  %6 = load %struct.mite_dma_desc*, %struct.mite_dma_desc** %5, align 8
  store %struct.mite_dma_desc* %6, %struct.mite_dma_desc** %3, align 8
  %7 = load %struct.mite_dma_desc*, %struct.mite_dma_desc** %3, align 8
  %8 = icmp ne %struct.mite_dma_desc* %7, null
  br i1 %8, label %9, label %30

9:                                                ; preds = %1
  %10 = load %struct.mite_ring*, %struct.mite_ring** %2, align 8
  %11 = getelementptr inbounds %struct.mite_ring, %struct.mite_ring* %10, i32 0, i32 3
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.mite_ring*, %struct.mite_ring** %2, align 8
  %14 = getelementptr inbounds %struct.mite_ring, %struct.mite_ring* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = sext i32 %15 to i64
  %17 = mul i64 %16, 4
  %18 = trunc i64 %17 to i32
  %19 = load %struct.mite_dma_desc*, %struct.mite_dma_desc** %3, align 8
  %20 = load %struct.mite_ring*, %struct.mite_ring** %2, align 8
  %21 = getelementptr inbounds %struct.mite_ring, %struct.mite_ring* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @dma_free_coherent(i32 %12, i32 %18, %struct.mite_dma_desc* %19, i32 %22)
  %24 = load %struct.mite_ring*, %struct.mite_ring** %2, align 8
  %25 = getelementptr inbounds %struct.mite_ring, %struct.mite_ring* %24, i32 0, i32 2
  store %struct.mite_dma_desc* null, %struct.mite_dma_desc** %25, align 8
  %26 = load %struct.mite_ring*, %struct.mite_ring** %2, align 8
  %27 = getelementptr inbounds %struct.mite_ring, %struct.mite_ring* %26, i32 0, i32 1
  store i32 0, i32* %27, align 4
  %28 = load %struct.mite_ring*, %struct.mite_ring** %2, align 8
  %29 = getelementptr inbounds %struct.mite_ring, %struct.mite_ring* %28, i32 0, i32 0
  store i32 0, i32* %29, align 8
  br label %30

30:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @dma_free_coherent(i32, i32, %struct.mite_dma_desc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
